5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1714_2518.log
== TEST (2019-05-15 09:09:25) 
-- CODE:
n = int(input("leia o numero: "))
c = 0
while(c<n):
	if(c==0):
		k = n //2
	else:
		k = n*3 +1
	c = c +1
		  
-- OUTPUT:
3.139684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:09:41) 
-- CODE:
n = int(input("leia o numero: "))
c = 0
while(c<n):
	if(c==0):
		k = n //2
	else:
		k = n*3 +1
	c = c +1
print(k)
		  
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:09:51) 
-- CODE:
n = int(input("leia o numero: "))
c = 0
while(c<n):
	if(c==0):
		k = n //2
	else:
		k = n*3 +1
	c = c +1
print(k)
		  
-- EXECUTION TIME:
0.128704
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
31
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
136
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
40
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:32:07) 
-- CODE:
n = int(input("leia o numero: "))
c = 0
while(c<n):
	if(c=!0):
		k = n //2
	else:
		k = n*3 +1
	c = c +1
print(k)
		  
-- ERROR:
File "XXXX", line 4
    if(c=!0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:32:21) 
-- CODE:
n = int(input("leia o numero: "))
c = 0
while(c<n):
	if(c!=0):
		k = n //2
	else:
		k = n*3 +1
	c = c +1
print(k)
		  
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:32:21) 
-- CODE:
n = int(input("leia o numero: "))
c = 0
while(c<n):
	if(c!=0):
		k = n //2
	else:
		k = n*3 +1
	c = c +1
print(k)
		  
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:32:34) 
-- CODE:
n = int(input("leia o numero: "))
c = 0
while(c<n):
	if(c!=0):
		k = n //2
	else:
		k = n*3 +1
	c = c +1
print(k)
		  
-- EXECUTION TIME:
0.149171
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
22
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:32:50) 
-- CODE:
n = int(input("leia o numero: "))
c = 0
while(c<n):
	if(c!=0):
		k = n //2
	else:
		k = n*3 +1
	c = c +1
print(k)
		  
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
